tests/baselines/reference/parserForOfStatement5.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement5.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement5.ts (1 errors) ====
    for (var a: number of X) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }